[gd_scene load_steps=4 format=2]

[ext_resource path="res://Lib/RandomNodePicker/RandomNodePicker.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://ExampleUsage/UsingRandomNodePicker/UsingRandomNodePicker.gd" type="Script" id=3]

[node name="UsingRandomNodePicker" type="Node"]
script = ExtResource( 3 )

[node name="Info" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Info"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.5
margin_top = 40.0
margin_right = 192.5
margin_bottom = 54.0
text = "A node is randomly picked and deleted from the scene tree."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeletedNodeLabel" type="Label" parent="Info"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.5
margin_top = 420.0
margin_right = 192.5
margin_bottom = 434.0
text = "Wait a moment..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainLabel" type="Label" parent="Info"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.5
margin_top = -50.0
margin_right = 192.5
margin_bottom = -36.0
text = "Run this scene again to see a different result"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Node2D" parent="."]

[node name="RandomNodePicker" parent="Sprites" instance=ExtResource( 1 )]

[node name="Sprite1" type="Sprite" parent="Sprites"]
position = Vector2( 172, 142 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 322, 142 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 472, 142 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 622, 142 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite5" type="Sprite" parent="Sprites"]
position = Vector2( 170, 330 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite6" type="Sprite" parent="Sprites"]
position = Vector2( 320, 330 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite6"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite7" type="Sprite" parent="Sprites"]
position = Vector2( 470, 330 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite7"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite8" type="Sprite" parent="Sprites"]
position = Vector2( 620, 330 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprites/Sprite8"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
margin_bottom = -18.0
text = "Sprite 8"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomPickDeleteTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="RandomPickDeleteTimer" to="." method="_on_RandomPickDeleteTimer_timeout"]
